--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
-<div class="nav">
-<a href="#">Главная</a>
-<a href="#">О нас</a>
-<a href="#">Продукты</a>
-<a href="#">Контакты</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<link rel="stylesheet"> href="./burger.css">
+	<title>Бургер</title>
+</head>
+<body>
+<div class="section">
+	<div class="menu-block">
+		<nav class="menu-nav">
+			<a class="menu-nav__link" href="#">Home</a>
+			<a class="menu-nav__link" href="#">About </a>
+			<a class="menu-nav__link" href="#">Portfolio </a>
+			<a class="menu-nav__link" href="#">Contats</a>
+		</nav>
+		<a href="#" class="menu">
+		<span> </span>
+	</a>
 </div>
+</div>
+</body>
+</html>
