--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,12 @@
-<meta name="viewport" content="initial-scale=1.0, width=device-width">
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<link rel="stylesheet"> href="./css1.css">
+	<meta name="viewport" content="initial-scale=1.0, width=device-width">
+	<title>1</title>
+</head>
+<body>
 
 <div class="t1">
   Hello
@@ -15,3 +23,5 @@
 <div class="t4">
   Love
 </div>
+</body>
+</html>
