--- a/index1.html
+++ b/index1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet"> href="./css1.css">
+	<link rel="stylesheet" href="./css1.css">
 	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 	<title>1</title>
 </head>
